# job-recommender-system-using-local-LLM

./: .env  LICENSE  README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
